argocd/portfolio/portfolio-website/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: gitea.homelab.bowmans.site/smam_admin/portfolio-website:latest
          imagePullPolicy: always
          ports:
            - name: web
              containerPort: 5000
