argocd/portfolio/portfolio-website/service-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  annotations:
    metallb.universe.tf/address-pool: metallb-pool-reserved
    metallb.universe.tf/ip-allocated-from-pool: metallb-pool-reserved
  name: website-ext
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: website
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.10.20.203
