argocd/portfolio/portfolio-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: website
