argocd/portfolio/portfolio-website/ingress-ext.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: website-ext-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bowmans.site`)
      kind: Rule
      services:
      - name: website
        port: 80
    - match: Host(`www.bowmans.site`)
      kind: Rule
      services:
      - name: website
        port: 80
  tls:
    secretName: website-ext-certificate
