argocd/portfolio/portfolio-website/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: website-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`website.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: website
        port: 80
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: website-certificate
